main: Updated Enhance API security and documentation; add inondation field to Capteur entity
