# back/src/Controller/CSRFTokenController.php
@@ -2,6 +2,7 @@
 
 namespace App\Controller;
 
+use Nelmio\ApiDocBundle\Attribute\Security;
 use OpenApi\Attributes as OA;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 use Symfony\Component\HttpFoundation\JsonResponse;
@@ -11,6 +12,7 @@ use Symfony\Component\Security\Csrf\CsrfToken;
 use Symfony\Component\Security\Csrf\CsrfTokenManagerInterface;
 
 #[Route('api/csrf-token', name: 'generate_token')]
+#[Security(name: 'BearerAuth')]
 final class CSRFTokenController extends AbstractController
 {
     #[Route('/', name: '_init', methods: ['GET'])]
